syntax = "proto3";

option java_multiple_files = true;
option java_generic_services = true;
option java_package = "io.lambdarpc.transport.grpc";
package io.lambdarpc.transport.grpc;

import "ExecuteRequest.proto";
import "ExecuteResponse.proto";

message OutMessage {
  oneof content {
    ExecuteRequest executeRequest = 1;
    ExecuteResponse executeResponse = 2;
    ExecuteResponse finalResponse = 3;
  }
}
