syntax = "proto3";

option java_multiple_files = true;
option java_package = "space.kscience.communicator";
package space.kscience.communicator;

// TODO serializers
message Payload {
  bytes payload = 1;
}

message ExecuteRequest {
  string functionName = 1;
  repeated Payload args = 2;
}

message ExecuteResult {
  Payload result = 1;
}

message Message {
  oneof payload {
    ExecuteRequest request = 1;
    ExecuteResult result = 2;
  }
}

service LibService {
  rpc execute(stream Message) returns (stream Message);
}
